--- a/ExViewer/Themes/NamedStyles.xaml
+++ b/ExViewer/Themes/NamedStyles.xaml
@@ -1272,5 +1272,19 @@
       </Setter.Value>
     </Setter>
   </Style>
+  
+  <Style x:Key="UpdateProgressRingStyle"
+         TargetType="ProgressRing">
+    <Setter Property="MinHeight"
+            Value="0" />
+    <Setter Property="MinWidth"
+            Value="0" />
+    <Setter Property="Height"
+            Value="16" />
+    <Setter Property="Width"
+            Value="16" />
+    <Setter Property="VerticalAlignment"
+            Value="Bottom" />
+  </Style>
 </ResourceDictionary>
 
