--- a/ExViewer/Controls/CommentViewer.xaml
+++ b/ExViewer/Controls/CommentViewer.xaml
@@ -1,5 +1,7 @@
 ﻿<UserControl x:Class="ExViewer.Controls.CommentViewer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:rs3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
+             xmlns:prers3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:ExViewer.Controls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -136,7 +138,8 @@
                Visibility="{x:Bind VM.Comment.IsUploaderComment, Mode=OneWay, Converter={StaticResource TrueToVisibleConverter}, FallbackValue=Collapsed}" />
     <Button x:Name="Actions"
             x:Uid="Controls/CommentViewer/ActionsButton"
-            Style="{StaticResource EllipsisButtonRevealStyle}"
+            rs3:Style="{StaticResource EllipsisButtonRevealStyle}"
+            prers3:Style="{StaticResource EllipsisButton}"
             RelativePanel.AlignTopWith="TimeInfo"
             RelativePanel.AlignBottomWith="Header"
             RelativePanel.AlignRightWithPanel="True"
