--- a/ExViewer/Controls/CoverPresenter.xaml
+++ b/ExViewer/Controls/CoverPresenter.xaml
@@ -1,5 +1,7 @@
 ﻿<UserControl x:Class="ExViewer.Controls.CoverPresenter"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:rs3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
+             xmlns:prers3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:ExViewer.Controls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,18 +12,20 @@
              d:DesignHeight="300"
              d:DesignWidth="200">
   <UserControl.Resources>
-    <AcrylicBrush x:Key="ImageBackgroundBrush"
-                  BackgroundSource="Backdrop"
-                  FallbackColor="{ThemeResource SystemBaseMediumColor}"
-                  TintColor="Transparent"
-                  TintOpacity="0" />
+    <rs3:AcrylicBrush x:Key="ImageBackgroundBrush"
+                      BackgroundSource="Backdrop"
+                      FallbackColor="{ThemeResource SystemBaseMediumColor}"
+                      TintColor="Transparent"
+                      TintOpacity="0" />
+    <prers3:SolidColorBrush x:Key="ImageBackgroundBrushFallback"
+                     Color="{ThemeResource SystemBaseMediumColor}"/>
   </UserControl.Resources>
   <Grid>
     <Image x:Name="BackgroundImage"
            x:DeferLoadStrategy="Lazy"
            Source="{x:Bind Source, Mode=OneWay}"
            Stretch="Fill" />
-    <Grid Background="{StaticResource ImageBackgroundBrush}">
+    <Grid rs3:Background="{StaticResource ImageBackgroundBrush}" prers3:Background="{StaticResource ImageBackgroundBrushFallback}">
       <Image x:Name="ForegroundImage"
              Source="{x:Bind Source, Mode=OneWay}" />
     </Grid>
