--- a/ExViewer/Controls/GalleryViewer.xaml
+++ b/ExViewer/Controls/GalleryViewer.xaml
@@ -1,5 +1,7 @@
 ﻿<UserControl x:Class="ExViewer.Controls.GalleryViewer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:rs3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
+             xmlns:prers3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:ExViewer.Controls"
              xmlns:client="using:ExClient"
@@ -32,102 +34,6 @@
               Value="Right" />
       <Setter Property="RelativePanel.AlignRightWithPanel"
               Value="True" />
-    </Style>
-    <Style x:Key="CompactRatingStyle"
-           TargetType="RatingControl">
-      <Setter Property="Height"
-              Value="24" />
-      <Setter Property="Padding"
-              Value="0" />
-      <Setter Property="IsTabStop"
-              Value="False" />
-      <Setter Property="Template">
-        <Setter.Value>
-          <ControlTemplate TargetType="RatingControl">
-            <Grid x:Name="LayoutRoot">
-
-              <VisualStateManager.VisualStateGroups>
-                <VisualStateGroup x:Name="CommonStates">
-                  <VisualState x:Name="Disabled">
-                    <VisualState.Setters>
-                      <Setter Target="ForegroundContentPresenter.Foreground"
-                              Value="{ThemeResource RatingControlDisabledSelectedForeground}" />
-                    </VisualState.Setters>
-                  </VisualState>
-                  <VisualState x:Name="Placeholder">
-                    <VisualState.Setters>
-                      <Setter Target="ForegroundContentPresenter.Foreground"
-                              Value="{ThemeResource RatingControlPlaceholderForeground}" />
-                    </VisualState.Setters>
-                  </VisualState>
-                  <VisualState x:Name="PointerOverPlaceholder">
-                    <VisualState.Setters>
-                      <Setter Target="ForegroundContentPresenter.Foreground"
-                              Value="{ThemeResource RatingControlPointerOverPlaceholderForeground}" />
-                    </VisualState.Setters>
-                  </VisualState>
-                  <VisualState x:Name="PointerOverUnselected">
-                    <VisualState.Setters>
-                      <Setter Target="ForegroundContentPresenter.Foreground"
-                              Value="{ThemeResource RatingControlPointerOverUnselectedForeground}" />
-                    </VisualState.Setters>
-                  </VisualState>
-                  <VisualState x:Name="Set">
-                    <VisualState.Setters>
-                      <Setter Target="ForegroundContentPresenter.Foreground"
-                              Value="{ThemeResource RatingControlSelectedForeground}" />
-                    </VisualState.Setters>
-                  </VisualState>
-                  <VisualState x:Name="PointerOverSet">
-                    <VisualState.Setters>
-                      <Setter Target="ForegroundContentPresenter.Foreground"
-                              Value="{ThemeResource RatingControlSelectedForeground}" />
-                    </VisualState.Setters>
-                  </VisualState>
-                </VisualStateGroup>
-
-              </VisualStateManager.VisualStateGroups>
-
-              <StackPanel Orientation="Horizontal"
-                          Grid.Row="0"
-                          Margin="-20,-20,-20,-20">
-                <StackPanel x:Name="RatingBackgroundStackPanel"
-                            Orientation="Horizontal"
-                            Background="Transparent"
-                            Margin="20,20,0,20" />
-                <TextBlock x:Name="Caption"
-                           Height="32"
-                           Margin="4,9,20,0"
-                           TextLineBounds="TrimToBaseline"
-                           Style="{ThemeResource CaptionTextBlockStyle}"
-                           VerticalAlignment="Center"
-                           AutomationProperties.AccessibilityView="Raw"
-                           AutomationProperties.Name="RatingCaption"
-                           IsHitTestVisible="False"
-                           Text="{TemplateBinding Caption}" />
-                <!-- 4 = 8 item spacing +4 of magic redline spacing -8 to compensate for scale of the last RatingItem -->
-                <!-- NB: The redlines say 8px, but it's really 12 px because:
-                                Designer note: The value between the last glyph and first text character is 12px.
-                                (There's 4px of whitespace accounted for in the text area in the redline) -->
-                <!-- TODO MSFT: 9925444 Fix vertical alignment in all text scenarios -->
-              </StackPanel>
-
-              <ContentPresenter x:Name="ForegroundContentPresenter"
-                                IsHitTestVisible="False"
-                                Grid.Row="0">
-                <!-- Margin is on the StackPanel because ContentPresenter clips differently such that moving the reverse margin up won't work -->
-                <StackPanel Orientation="Horizontal"
-                            Margin="-40,-40,-40,-40">
-                  <StackPanel x:Name="RatingForegroundStackPanel"
-                              Orientation="Horizontal"
-                              IsHitTestVisible="False"
-                              Margin="40,40,40,40" />
-                </StackPanel>
-              </ContentPresenter>
-            </Grid>
-          </ControlTemplate>
-        </Setter.Value>
-      </Setter>
     </Style>
   </UserControl.Resources>
   <Grid Background="{x:Bind Background, Mode=OneWay}"
@@ -164,7 +70,7 @@
                  Margin="0,0,0,8">
                 <ToolTipService.ToolTip>
                     <ToolTip x:Name="TitleToolTop"
-                             IsEnabled="{x:Bind TitleTextBlock.IsTextTrimmed, Mode=OneWay}">
+                             rs3:IsEnabled="{x:Bind TitleTextBlock.IsTextTrimmed, Mode=OneWay}">
                         <TextBlock Text="{x:Bind client:GalleryExtension.GetDisplayTitle(Gallery), Mode=OneWay}"
                                    TextWrapping="WrapWholeWords" />
                     </ToolTip>
@@ -177,12 +83,10 @@
                  RelativePanel.Above="Rating"
                  Text="{x:Bind Gallery.Language, Mode=OneWay, Converter={StaticResource FormatConverter}}"
                  Style="{StaticResource DetailTextBlockStyle}" />
-      <RatingControl x:Name="Rating"
-                     Style="{StaticResource CompactRatingStyle}"
-                     IsReadOnly="True"
-                     RelativePanel.AlignBottomWithPanel="True"
-                     PlaceholderValue="{x:Bind Gallery.Rating.AverageScore, Mode=OneWay}"
-                     Margin="0,-4,0,0" />
+      <local:Rating x:Name="Rating"
+                    RelativePanel.AlignBottomWithPanel="True"
+                    PlaceholderValue="{x:Bind Gallery.Rating.AverageScore, Mode=OneWay}"
+                    Margin="0,-4,0,0" />
       <TextBlock x:Name="tbCount"
                  RelativePanel.AlignVerticalCenterWith="CategoryTag"
                  RelativePanel.RightOf="CategoryTag"
