--- a/ExViewer/Themes/GenericOverride.xaml
+++ b/ExViewer/Themes/GenericOverride.xaml
@@ -1,6 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="PivotHeaderItem">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:rs3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
+                    xmlns:prers3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)">
+  <prers3:Style x:Key="ButtonRevealStyle"
+                TargetType="Button" />
+  <Style TargetType="PivotHeaderItem">
         <Setter Property="Height"
                 Value="Auto" />
         <Setter Property="MinHeight"
