--- a/ExViewer/Views/CommentDialog.xaml
+++ b/ExViewer/Views/CommentDialog.xaml
@@ -1,6 +1,8 @@
 ﻿<controls:MyContentDialog x:Class="ExViewer.Views.CommentDialog"
                           x:Uid="Views/CommentDialog/ContentDialog"
                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                          xmlns:rs3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
+                          xmlns:prers3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
                           xmlns:controls="using:ExViewer.Controls"
                           xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -13,20 +15,9 @@
                           SecondaryButtonText="Cancel"
                           IsEnabled="{x:Bind pbLoading.IsIndeterminate, Converter={StaticResource LogicalNotConverter}, Mode=OneWay}">
   <ContentControl.Resources>
-    <Style x:Key="ToolBarAppBarButtonStyle"
-           TargetType="AppBarButton">
-      <Setter Property="LabelPosition"
-              Value="Collapsed" />
-      <Setter Property="Height"
-              Value="48" />
-      <Setter Property="Width"
-              Value="Auto" />
-      <Setter Property="MinWidth"
-              Value="48" />
-      <Setter Property="HorizontalAlignment"
-              Value="Stretch" />
-      <Setter Property="VerticalAlignment"
-              Value="Stretch" />
+    <rs3:Style x:Key="ToolBarAppBarButtonStyle"
+               TargetType="AppBarButton"
+               BasedOn="{StaticResource ToolBarAppBarButtonStyleFallback}">
       <Setter Property="Background"
               Value="{ThemeResource AppBarButtonRevealBackground}" />
       <Setter Property="Foreground"
@@ -35,14 +26,6 @@
               Value="{ThemeResource AppBarButtonRevealBorderBrush}" />
       <Setter Property="BorderThickness"
               Value="{ThemeResource AppBarButtonRevealBorderThemeThickness}" />
-      <Setter Property="FontFamily"
-              Value="{ThemeResource ContentControlThemeFontFamily}" />
-      <Setter Property="FontWeight"
-              Value="Normal" />
-      <Setter Property="UseSystemFocusVisuals"
-              Value="True" />
-      <Setter Property="AllowFocusOnInteraction"
-              Value="False" />
       <Setter Property="Template">
         <Setter.Value>
           <ControlTemplate TargetType="AppBarButton">
@@ -104,10 +87,34 @@
           </ControlTemplate>
         </Setter.Value>
       </Setter>
+    </rs3:Style>
+    <Style x:Key="ToolBarAppBarButtonStyleFallback"
+           TargetType="AppBarButton">
+      <Setter Property="LabelPosition"
+              Value="Collapsed" />
+      <Setter Property="Height"
+              Value="48" />
+      <Setter Property="Width"
+              Value="Auto" />
+      <Setter Property="MinWidth"
+              Value="48" />
+      <Setter Property="HorizontalAlignment"
+              Value="Stretch" />
+      <Setter Property="VerticalAlignment"
+              Value="Stretch" />
+      <Setter Property="FontFamily"
+              Value="{ThemeResource ContentControlThemeFontFamily}" />
+      <Setter Property="FontWeight"
+              Value="Normal" />
+      <Setter Property="UseSystemFocusVisuals"
+              Value="True" />
+      <Setter Property="AllowFocusOnInteraction"
+              Value="False" />
     </Style>
   </ContentControl.Resources>
 
-  <Grid Margin="0,8,0,0" SizeChanged="Grid_SizeChanged">
+  <Grid Margin="0,8,0,0"
+        SizeChanged="Grid_SizeChanged">
     <Grid.RowDefinitions>
       <RowDefinition />
       <RowDefinition Height="Auto" />
@@ -135,28 +142,32 @@
       <AppBarButton x:Name="abbBold"
                     Grid.Column="0"
                     x:Uid="Views/CommentDialog/AppBarButtonBold"
-                    Style="{StaticResource ToolBarAppBarButtonStyle}"
+                    rs3:Style="{StaticResource ToolBarAppBarButtonStyle}"
+                    prers3:Style="{StaticResource ToolBarAppBarButtonStyleFallback}"
                     Click="abb_Click"
                     Icon="Bold"
                     Tag="b" />
       <AppBarButton x:Name="abbItalic"
                     Grid.Column="1"
                     x:Uid="Views/CommentDialog/AppBarButtonItalic"
-                    Style="{StaticResource ToolBarAppBarButtonStyle}"
+                    rs3:Style="{StaticResource ToolBarAppBarButtonStyle}"
+                    prers3:Style="{StaticResource ToolBarAppBarButtonStyleFallback}"
                     Click="abb_Click"
                     Icon="Italic"
                     Tag="i" />
       <AppBarButton x:Name="abbUnderline"
                     Grid.Column="2"
                     x:Uid="Views/CommentDialog/AppBarButtonUnderline"
-                    Style="{StaticResource ToolBarAppBarButtonStyle}"
+                    rs3:Style="{StaticResource ToolBarAppBarButtonStyle}"
+                    prers3:Style="{StaticResource ToolBarAppBarButtonStyleFallback}"
                     Click="abb_Click"
                     Icon="Underline"
                     Tag="u" />
       <AppBarButton x:Name="abbStrike"
                     Grid.Column="3"
                     x:Uid="Views/CommentDialog/AppBarButtonStrike"
-                    Style="{StaticResource ToolBarAppBarButtonStyle}"
+                    rs3:Style="{StaticResource ToolBarAppBarButtonStyle}"
+                    prers3:Style="{StaticResource ToolBarAppBarButtonStyleFallback}"
                     Click="abb_Click"
                     Tag="s">
         <AppBarButton.Icon>
@@ -168,7 +179,8 @@
       <AppBarButton x:Name="abbLink"
                     Grid.Column="4"
                     x:Uid="Views/CommentDialog/AppBarButtonLink"
-                    Style="{StaticResource ToolBarAppBarButtonStyle}"
+                    rs3:Style="{StaticResource ToolBarAppBarButtonStyle}"
+                    prers3:Style="{StaticResource ToolBarAppBarButtonStyleFallback}"
                     Click="abb_Click"
                     Icon="Link"
                     Tag="url" />
