--- a/ExViewer/Views/ImagePage.xaml
+++ b/ExViewer/Views/ImagePage.xaml
@@ -1,5 +1,7 @@
 ﻿<controls:MyPage x:Class="ExViewer.Views.ImagePage"
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:rs3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
+                 xmlns:prers3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:controls="using:ExViewer.Controls"
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -237,7 +239,8 @@
               Value="NoWrap" />
     </Style>
   </Page.Resources>
-  <RelativePanel Background="{ThemeResource SystemControlAltHighAcrylicWindowBrush}">
+  <RelativePanel rs3:Background="{ThemeResource SystemControlAltHighAcrylicWindowBrush}"
+                 prers3:Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <Image x:Name="imgConnect"
            RelativePanel.AlignBottomWithPanel="True"
            RelativePanel.AlignLeftWithPanel="True"
@@ -323,7 +326,7 @@
                      Style="{StaticResource GalleryTitleTextBlockStyle}"
                      Text="{x:Bind client:GalleryExtension.GetDisplayTitle(VM.Gallery), Mode=OneWay}">
                         <ToolTipService.ToolTip>
-                          <ToolTip IsEnabled="{x:Bind tb_Title.IsTextTrimmed, Mode=OneWay}">
+                          <ToolTip rs3:IsEnabled="{x:Bind tb_Title.IsTextTrimmed, Mode=OneWay}">
                             <TextBlock Text="{x:Bind client:GalleryExtension.GetDisplayTitle(VM.Gallery), Mode=OneWay}"
                                        TextWrapping="WrapWholeWords" />
                           </ToolTip>
